--- a/android-developer.html
+++ b/android-developer.html
@@ -88,7 +88,7 @@ accepted) at Kapten.</p>
 <p><span class="badge badge-light">Vietnam Vietnam</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/wizardsofthecoast/jobs/4369039002'>Job Application for Contract/Temporary- Sr. Android Developer at Wizards of the Coast</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wizardsofthecoast/jobs/4369039002'>Job Application for Contract/Temporary- Sr. Android Developer at Wizards of the Coast</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -184,7 +184,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CrossBorderTalents1/743999683079774-senior-android-mobile-developer-to-work-in-prague-czech-republic'>Cross Border Talents Senior Android Mobile Developer to work in Prague, Czech Republic | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CrossBorderTalents1/743999683079774-senior-android-mobile-developer-to-work-in-prague-czech-republic'>Cross Border Talents Senior Android Mobile Developer to work in Prague, Czech Republic | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -265,7 +265,7 @@ European software development company providing services worldwide since?...</p>
 <p>Hace 3 d?as ... Android Developer. Buenos Aires. Operations ? Developers. Full time. Apply for 
 this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syone2.recruitee.com/o/ref4392019-android-developer'>
+<h5><a href='https://syone2.recruitee.com/o/ref4392019-android-developer'>
       (Ref.439/2019) - Android Developer - Syone
     </a></h5> 
 <p><span class="badge badge-light">Porto, Portugal</span></p>
@@ -281,7 +281,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://wundermanthompsoncommerce.workable.com/j/1797B0961D'>Wunderman Thompson Commerce - Jobs: Android Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wundermanthompsoncommerce.workable.com/j/1797B0961D'>Wunderman Thompson Commerce - Jobs: Android Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -331,7 +331,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kapten.workable.com/j/5586C7F4D3'>Kapten - Jobs: Android Developer (M/F) #Kotlin - Paris (relocation accepted) - Apply online</a></h5> 
+<h5><a href='https://kapten.workable.com/j/5586C7F4D3'>Kapten - Jobs: Android Developer (M/F) #Kotlin - Paris (relocation accepted) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -365,7 +365,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on:: 2019-07-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://smashingideas.applytojob.com/apply/pBLtoZ9siW/Android-Developer'>Android Developer - Smashing Ideas - Career Page</a></h5> 
+<h5><a href='http://smashingideas.applytojob.com/apply/pBLtoZ9siW/Android-Developer'>Android Developer - Smashing Ideas - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
@@ -389,7 +389,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on:: 2019-07-05</p>
 <hr/>
-<h5><a href='https://skipr.recruitee.com/o/senior-android-flutter-developer'>Senior Android Flutter Developer - Skipr</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://skipr.recruitee.com/o/senior-android-flutter-developer'>Senior Android Flutter Developer - Skipr</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Master degree or higher in computer science, data science, engineering, ... * 
 Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations,?...</p>
@@ -404,7 +404,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-07-05</p>
 <hr/>
-<h5><a href='http://fincons.applytojob.com/apply/Ow0RNJgYP0/ANDROID-SENIOR-DEVELOPER'>ANDROID SENIOR DEVELOPER - Fincons Spa - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://fincons.applytojob.com/apply/Ow0RNJgYP0/ANDROID-SENIOR-DEVELOPER'>ANDROID SENIOR DEVELOPER - Fincons Spa - Career Page</a></h5> 
 <p><span class="badge badge-light">Italy</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
@@ -436,7 +436,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/GreppySystems/743999690987897-android-developer'>Greppy Systems Android Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GreppySystems/743999690987897-android-developer'>Greppy Systems Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cluj-Napoca, Romania</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
