--- a/frontend.html
+++ b/frontend.html
@@ -38,11 +38,15 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://rubensteintech.applytojob.com/apply/NJzCxDWQ0t/Frontend-Web-Developer'>Front-end Web Developer - RubensteinTech - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
 <h5><a href='http://luisaviaroma.applytojob.com/apply/lSnoQw/FRONTEND-DEVELOPER'>FRONT-END DEVELOPER - Luisa Via Roma spa - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/ungerboeck/job/oc6uafwG'>Ungerboeck Software International Careers - Front End Web Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ungerboeck/job/oc6uafwG'>Ungerboeck Software International Careers - Front End Web Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -132,7 +136,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://invers.recruitee.com/o/softwareentwickler-schwerpunkt-webfrontends-mit-javascript-wmd'>
+<h5><a href='https://invers.recruitee.com/o/softwareentwickler-schwerpunkt-webfrontends-mit-javascript-wmd'>
       Software-Entwickler, Schwerpunkt Webfrontends mit Javascript (w/m/d) - INVERS
     </a></h5> 
 <p><span class="badge badge-light">K?ln, Deutschland</span></p>
@@ -218,7 +222,7 @@ have?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of Lead Frontend Developer at Drover.</p>
 <hr/>
-<h5><a href='https://pixel-union.workable.com/j/5BB78CDD9F?viewed=true'>Front-end Developer - Apply online - Pixel Union - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pixel-union.workable.com/j/5BB78CDD9F?viewed=true'>Front-end Developer - Apply online - Pixel Union - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Front-end Developer at Pixel Union.</p>
 <hr/>
@@ -296,7 +300,7 @@ industry-leading SaaS based platform that solves a suite of provider data?...</p
 <p>3 days ago ... Our technology teams are growing, and we're hiring a Senior Frontend Engineer. 
 If you're looking for a career with a purpose, you've come to the right place.</p>
 <hr/>
-<h5><a href='https://letsumai.join.com/jobs/272177-react-front-end-developer'>Job @ UMAI (Kuala Lumpur): React Front-End Developer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://letsumai.join.com/jobs/272177-react-front-end-developer'>Job @ UMAI (Kuala Lumpur): React Front-End Developer | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -339,13 +343,13 @@ built as a Single Page App using Angular (2+) and React application. We are?...<
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://streetbees.workable.com/jobs/1082873'>Front-End Developer (ReactJS) - Apply online - Streetbees - Jobs</a></h5> 
+<h5><a href='https://streetbees.workable.com/jobs/1082873'>Front-End Developer (ReactJS) - Apply online - Streetbees - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... ... Building apps that control, direct and query our AI / Machine Learning 
 technologies, allowing our teams to train the ML models, and allowing analysts to 
 make?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uscareers-goldmansachs.icims.com/jobs/54960/front-end-web-developer---transaction-banking/job'>Careers Center Front-End Web Developer - Transaction Banking in ...</a></h5> 
+<h5><a href='https://uscareers-goldmansachs.icims.com/jobs/54960/front-end-web-developer---transaction-banking/job'>Careers Center Front-End Web Developer - Transaction Banking in ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... ... infrastructure solutions, proactively guard against cyber threats, and leverage 
 machine learning alongside financial engineering to continuously turn data into?...</p>
@@ -364,7 +368,7 @@ machine learning alongside financial engineering to continuously turn data into?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/INNOVIEW/743999692173925-frontend-developer'>Innoview Frontend Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/INNOVIEW/743999692173925-frontend-developer'>Innoview Frontend Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Budapest</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -453,16 +457,12 @@ published: 19.06.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/newrelic/job/oifDafw4'>New Relic Careers - Senior Front-End Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/newrelic/job/oifDafw4'>New Relic Careers - Senior Front-End Engineer</a></h5> 
 <p><span class="badge badge-light">Barcelona,</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/koldpartners/0d0d69c1-6853-446b-b69a-35455769705e'>Kold+Partners - Good Monday - Senior Frontend Developer</a></h5> 
 <p><span class="badge badge-light">Denmark</span></p>
-<p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='http://latitudeinc.applytojob.com/apply/V10V2xOXa1/Front-End-Developer-Needed-Near-Norristown'>Front End Developer Needed Near Norristown - Latitude, Inc. - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
 
