Job @ brandung & Co. KG (Köln): UX Designer / Konz... | JOIN. Lead Product Designer (UI/UX) | Noodle.com - The Noodle Companies - Career Page. Job @ Sharpist (Berlin): UI/(UX) Designer | JOIN. Mitel Careers - UX Designer. PitchBook Data, Inc. Careers - UX Team Lead. Seeka Technology Graphics designer (UX/UI Design) (Part-time/ Full time) | SmartRecruiters. Job @ JOIN Solutions (Berlin): UX Designer (f/m/d) | JOIN. Lifesize, Inc. Careers - Product UI/UX Designer. Freedom Financial Network Careers - Sr. UX Designer. Job Application for Senior UX/UI Designer at SevenRooms. Job Application for UI/UX Designer at SevenRooms. Job Application for UX / UI Designer at Cast & Crew Entertainment Services, LLC.     UX Project Manager at Modus . Bravium Consulting Careers - Salesforce UI/UX Designer. Multiplica - Jobs: UX Researcher Sr - Apply online. PitchBook Data, Inc. Careers - UX Team Lead. Delta Dental - Senior Software Engineer - UI/UX. Head of Performance Marketing - BUX.       Senior UX Designer (m/f/d) focus Usability Concept - designaffairs GmbH     . UX/UI developer (m/f/d) - Code Intelligence. Job @ NIST (Berlin): Internship UI/UX | JOIN. Skilljar - Senior User Experience (UX) Designer. Skilljar - User Experience (UX) Designer. Automation Anywhere Careers - Designer, Sr. (UX). Ingram Micro Careers - Manager, UX/UI Design.     UX Project Manager at Modus . Farfetch Careers - Senior UI/UX Product Designer. UX Internship - Codal - Career Page. UX/UI Designer - Codal - Career Page. Senior UX/UI Designer - Codal - Career Page. Job Application for User Experience (UX) Strategy & Design Lead at AKQA. UX Researcher (9382691) - PRO Unlimited @ Facebook - Career Page. UX Researcher (9257956) - PRO Unlimited @ Facebook - Career Page. UX Lab Technical Support (9259511) - PRO Unlimited @ Facebook - Career Page. UX Research Lab Technical Support (9362310) - PRO Unlimited @ Facebook - Career Page. Mobile Test Engineer - BUX. Version 1 UX Consultant | SmartRecruiters. Virtuo - UX de

--- a/ux.html
+++ b/ux.html
@@ -73,7 +73,7 @@
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oHbT9fwE&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nZWeWLwl'>Freedom Financial Network Careers - Sr. UX Designer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oHbT9fwE&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nZWeWLwl'>Freedom Financial Network Careers - Sr. UX Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-28</p>
 <hr/>
@@ -111,7 +111,7 @@
 <p><span class="badge badge-light">Alpharetta, GA</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bux.recruitee.com/o/head-of-performance-marketing'>Head of Performance Marketing - BUX</a></h5> 
+<h5><a href='https://bux.recruitee.com/o/head-of-performance-marketing'>Head of Performance Marketing - BUX</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Define digital channel mix and use data to continuously optimize marketing 
 expenditure on campaigns across these countries. Initiate new and smart ways 
@@ -123,12 +123,12 @@ for?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://codeintelligence.recruitee.com/o/uxui-developer-mfd'>UX/UI developer (m/f/d) - Code Intelligence</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://codeintelligence.recruitee.com/o/uxui-developer-mfd'>UX/UI developer (m/f/d) - Code Intelligence</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 20, 2019 ... We are Code Intelligence, a fast growing IT startup enabling companies to 
 simplify their software testing processes. Our product enables users to test their?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nist.join.com/jobs/262433-internship-ui-ux'>Job @ NIST (Berlin): Internship UI/UX | JOIN</a></h5> 
+<h5><a href='https://nist.join.com/jobs/262433-internship-ui-ux'>Job @ NIST (Berlin): Internship UI/UX | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -136,7 +136,7 @@ simplify their software testing processes. Our product enables users to test the
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/skilljar/af6b66c1-ee76-46c3-917a-231d8cfa00e2'>Skilljar - User Experience (UX) Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/skilljar/af6b66c1-ee76-46c3-917a-231d8cfa00e2'>Skilljar - User Experience (UX) Designer</a></h5> 
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -204,7 +204,7 @@ taking down all barriers and disrupting the trading experience, we're helping ne
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/govirtuo/a8110242-da20-47bc-847f-1e5badd6beae'>Virtuo - UX designer</a></h5> 
+<h5><a href='https://jobs.lever.co/govirtuo/a8110242-da20-47bc-847f-1e5badd6beae'>Virtuo - UX designer</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -261,7 +261,7 @@ research, interaction design, data visualization, prototyping, and the productio
 <p><span class="badge badge-light">Jakarta Jakarta</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://revelhealth.applytojob.com/apply/sQHoCxAslQ/Sr-UX-Designer'>Sr. UX Designer - Revel Health - Career Page</a></h5> 
+<h5><a href='http://revelhealth.applytojob.com/apply/sQHoCxAslQ/Sr-UX-Designer'>Sr. UX Designer - Revel Health - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -339,7 +339,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/farfetch/job/odHM7fwx'>Farfetch Careers - Senior UI/UX Product Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/farfetch/job/odHM7fwx'>Farfetch Careers - Senior UI/UX Product Designer</a></h5> 
 <p><span class="badge badge-light">Shanghai</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -361,7 +361,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/corelight/jobs/1788691'>Job Application for Engineering: Lead UI Engineer (UI/UX) at Job Board</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/corelight/jobs/1788691'>Job Application for Engineering: Lead UI Engineer (UI/UX) at Job Board</a></h5> 
 <p><span class="badge badge-light">San Francisco, California San Francisco Columbus</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -407,7 +407,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/helbiz/20618d79-f090-4726-8266-530e1f2b0233'>Helbiz Inc. - UX/UI Designer</a></h5> 
+<h5><a href='https://jobs.lever.co/helbiz/20618d79-f090-4726-8266-530e1f2b0233'>Helbiz Inc. - UX/UI Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -465,7 +465,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
