Nutanix Careers - MTS - DevOps Developer. Linux DevOps / WebOps Engineer - RubensteinTech - Career Page. TuneIn - Staff DevOps Engineer. Wirecard Asia - Jobs: Application Engineer (DevOps) - Apply online. Aroghia Group Sr. Azure DevOps Engineer | SmartRecruiters. Bey (Remote Job) Senior AWS DevOps Engineer (Terraform) - Need candidates on W2 | SmartRecruiters. Job @ Healthmetrix (Berlin): Senior DevOps Enginee... | JOIN. loanDepot Careers - Principal DevOps Engineer. Zeta Global Careers - DevOps Engineer. Zeta Global Careers - DevOps Engineer.     0723 - Sr DevOps Engineer at Workforce Source .     0722 - Sr DevOps Engineer at Workforce Source . Guidewire Software, Inc. Careers - Cloud DevOps Manager - Exton, PA. MORI Associates, Inc. Careers - Linux Systems Administrator - DevOps - Nasa/JPL. Lifesize, Inc. Careers - DevOps Engineer. Arcadia Power - Jobs: Senior DevOps Engineer - Apply online. DevOps Senior Analyst - Careers at WMP Careers.       IT-Admin / DevOps-Engineer (w/m/d) - INVERS     . Job Application for DevOps Engineer at ReCharge Payments. Zeta Global Careers - DevOps Engineer. Incorta - Jobs: DevOps Cloud Engineer - Cairo - Apply online. DevOps Engineer - Apply online - Skylight - Jobs. DevOps Engineer - Apply online - Everledger - Jobs. Jobs: DevOps Engineer (m/f) - Apply online - Glispa. Tech Firefly - Jobs: DevOps Database Engineer - Apply online. RecruiterDNA | DevOpsDNA - Job Page. RecruiterDNA | DevOpsDNA - Job Page. Sr. DevOps Engineer | RecruiterDNA | DevOpsDNA - Job Page. Conga Senior DevOps Engineer | SmartRecruiters. Best Western Hotels & Resorts Senior IT Engineer - DevOps | SmartRecruiters. Senior Devops Engineer - h2o.ai - Career Page. Schneider Electric NAM Careers - Security Team Leader (Cloud, Big Data, DevOps, Risk Assurance). Co-op Software Engineer - DevOps - Nokia Careers. Yapily Ltd DevOps Engineer | SmartRecruiters. Job @ Upvest (Berlin): Senior/Lead DevOps Engineer... | JOIN. Linux DevOps / WebOps Engineer - RubensteinTech - Car

--- a/devops.html
+++ b/devops.html
@@ -43,10 +43,10 @@
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='http://rubensteintech.applytojob.com/apply/i99mViLD4X/Linux-DevOps-WebOps-Engineer'>Linux DevOps / WebOps Engineer - RubensteinTech - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tunein/d82e7176-a991-4c08-9f93-e53326767039'>TuneIn - Staff DevOps Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/tunein/d82e7176-a991-4c08-9f93-e53326767039'>TuneIn - Staff DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -78,7 +78,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://workforcesource.recruiterbox.com/jobs/fk03f4v/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://workforcesource.recruiterbox.com/jobs/fk03f4v/'>
     0723 - Sr DevOps Engineer at Workforce Source
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -141,11 +141,11 @@ relationships through actionable data, advanced analytics and machine learning.<
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of DevOps Engineer (m/f) at Glispa.</p>
 <hr/>
-<h5><a href='https://techfirefly.workable.com/j/A58B950AB1?viewed=true'>Tech Firefly - Jobs: DevOps Database Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://techfirefly.workable.com/j/A58B950AB1?viewed=true'>Tech Firefly - Jobs: DevOps Database Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of DevOps Database Engineer at Tech Firefly.</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/devopsdna/search?locationState=ca&amp;location=sunnyvale'>RecruiterDNA | DevOpsDNA - Job Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/devopsdna/search?locationState=ca&amp;location=sunnyvale'>RecruiterDNA | DevOpsDNA - Job Page</a></h5> 
 <p><span class="badge badge-light">Redwood City, CA San Jose, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -251,11 +251,11 @@ and has worked for companies like Google and Cisco. Nathan is ex-Chief?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/altisource/jobs/1786853'>Job Application for Group Manager, DevOps at Altisource</a></h5> 
+<h5><a href='https://boards.greenhouse.io/altisource/jobs/1786853'>Job Application for Group Manager, DevOps at Altisource</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692319708-cloud-devops-engineer'>4Catalyzer Cloud DevOps Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692319708-cloud-devops-engineer'>4Catalyzer Cloud DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -273,11 +273,11 @@ and has worked for companies like Google and Cisco. Nathan is ex-Chief?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/idt/a406cb4a-3923-4930-ad0e-d6c805adb64b'>IDT - Director of Development Operations - DevOps</a></h5> 
+<h5><a href='https://jobs.lever.co/idt/a406cb4a-3923-4930-ad0e-d6c805adb64b'>IDT - Director of Development Operations - DevOps</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://drover.workable.com/j/E9C5D6221B?viewed=true'>Jedi / Devops Engineer - Apply online - Drover - Jobs</a></h5> 
+<h5><a href='https://drover.workable.com/j/E9C5D6221B?viewed=true'>Jedi / Devops Engineer - Apply online - Drover - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... Apply online for the job of Jedi / Devops Engineer at Drover.</p>
 <hr/>
@@ -307,7 +307,7 @@ and has worked for companies like Google and Cisco. Nathan is ex-Chief?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/carproof/job/o8wAafw8'>CARFAX Canada Careers - DevOps Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/carproof/job/o8wAafw8'>CARFAX Canada Careers - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -352,7 +352,7 @@ published: 18.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://synedat.join.com/jobs/266644-devops-engineer-m-w-d'>Job @ Synedat Consulting (Berlin): DevOps Engineer... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://synedat.join.com/jobs/266644-devops-engineer-m-w-d'>Job @ Synedat Consulting (Berlin): DevOps Engineer... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -360,7 +360,7 @@ published: 18.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=obB08fwE&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=nuWSTKwq'>Cirrus Logic Careers - DevOps Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=obB08fwE&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=nuWSTKwq'>Cirrus Logic Careers - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
